--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -2,62 +2,113 @@
     <div #formRef>
 
         <form #formSignIn="ngForm">
-            <div class="form-group">
-                <label for="Name">Name:</label>
-                <input type="text" validation-name="name" class="form-control" id="Name" [(ngModel)]="Item.name"
-                    name="name">
-            </div>
-          
-            <div class="form-group">
-                <label for="Name">Tag:</label>
-                <katana-chips  [(model)]="Item.tags"></katana-chips>
-            </div>
-            <div class="form-group">
-                <label for="Name">Https redirect status code (optional)</label>
-                <input type="text" class="form-control" id="URL" [(ngModel)]="Item.https_redirect_status_code"
-                    name="URL">
-            </div>
-            <div class="form-group">
-                <label for="Name">Host:</label>
-                <katana-chips  [(model)]="Item.hosts"></katana-chips>
-            </div>
-            <div class="form-group">
-                <label for="Name">regex_priority:</label>
-                <input type="number" class="form-control" id="Port" [(ngModel)]="Item.regex_priority" name="Port">
-            </div>
-            <div class="form-group">
-                <label for="Name">paths:</label>
-                <katana-chips validation-name="path" [(model)]="Item.paths"></katana-chips>
-            </div>
-            <div class="form-group">
-                    <label for="Name">Method:</label>
-                    <katana-chips  [(model)]="Item.methods"></katana-chips>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Name  <label style="font-size: small;color: grey;">(optional)</label></label>
+                <div class="col-sm-10">
+                    <input type="text" validation-name="Name" class="form-control" id="Name" [(ngModel)]="item.name"
+                        name="name">
                 </div>
-            <div class="form-group">
-                <label for="Name">strip_path:</label>
-                <katana-radio-items [(model)]="Item.strip_path">
-                    <katana-radio-item [value]="true"  [checked]="Item.strip_path==true" [label]="'true'"></katana-radio-item>
-                    <katana-radio-item [value]="false" [checked]="Item.strip_path==false" [label]="'false'"></katana-radio-item>
-                </katana-radio-items>
+
             </div>
-            <div class="form-group">
-                <label for="Name">preserve_host:</label>
-                <katana-radio-items [(model)]="Item.preserve_host">
-                        <katana-radio-item [value]="true"  [checked]="Item.preserve_host==true" [label]="'true'"></katana-radio-item>
-                        <katana-radio-item [value]="false" [checked]="Item.preserve_host==false" [label]="'false'"></katana-radio-item>
+
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Tags <label style="font-size: small;color: grey;">(optional)</label></label>
+                <div class="col-sm-10">
+                    <katana-chips  validation-name="Tags" [(model)]="item.tags" ></katana-chips>
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Https redirect status code <label style="font-size: small;color: grey;">(optional)</label></label>
+                <div class="col-sm-10">
+                    <input type="number" validation-name="StatusCode" class="form-control" id="URL" [(ngModel)]="item.https_redirect_status_code"
+                        name="URL">
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Host <label style="font-size: small;color: grey;">(semi-optional)</label></label>
+                <div class="col-sm-10">
+                    <katana-chips validation-name="Host" [(model)]="item.hosts"></katana-chips>
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Regex priority <label style="font-size: small;color: grey;">(optional)</label></label>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control" id="Port" [(ngModel)]="item.regex_priority" name="Port">
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Paths <label style="font-size: small;color: grey;">(semi-optional)</label></label>
+                <div class="col-sm-10">
+                    <katana-chips [validationName]="'paths'" [(model)]="item.paths"></katana-chips>
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Methods <label style="font-size: small;color: grey;">(semi-optional)</label></label>
+                <div class="col-sm-10">
+                    <katana-chips validation-name="Method" [(model)]="item.methods"></katana-chips>
+
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Strip Path <label style="font-size: small;color: grey;">(optional)</label></label>
+                <div class="col-sm-10">
+                    <katana-radio-items [(model)]="item.strip_path">
+                        <katana-radio-item [value]="'true'" [checked]="item.strip_path==true" [label]="'true'">
+                        </katana-radio-item>
+                        <katana-radio-item [value]="'false'" [checked]="item.strip_path==false" [label]="'false'">
+                        </katana-radio-item>
                     </katana-radio-items>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label for="Name">protocols</label>
-                <katana-chips  [(model)]="Item.protocols"></katana-chips>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Preserve Host <label style="font-size: small;color: grey;">(optional)</label></label>
+                <div class="col-sm-10">
+                    <katana-radio-items [(model)]="item.preserve_host">
+                        <katana-radio-item [value]="'true'" [checked]="item.preserve_host==true" [label]="'true'">
+                        </katana-radio-item>
+                        <katana-radio-item [value]="'false'" [checked]="item.preserve_host==false" [label]="'false'">
+                        </katana-radio-item>
+                    </katana-radio-items>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label for="Name">Service</label>
-                <select validation-name="service" class="form-control" (change)="onChange($event.target.value)" >
-                    <option  *ngFor="let item of services" value="{{item.id}}" [selected]="Item.service.id == item.id">{{item.name}}
-                    </option>
-                </select>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Protocols <label style="font-size: small;color: grey;">(semi-optional)</label></label>
+                <div class="col-sm-10">
+                    <katana-chips validation-name="Protocols" [(model)]="item.protocols"></katana-chips>
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for="Name" class="col-sm-2 col-form-label">Service <label style="font-size: small;color: grey;">(optional)</label></label>
+                <div *ngIf="item.service==null; then addRouter else editRouter"></div>
+                <ng-template #addRouter>
+                    <div class="col-sm-10">
+                        <select validation-name="service" class="form-control" (change)="onChange($event.target.value)">
+                            <option *ngFor="let itemService of services" value="{{itemService.id}}">{{itemService.name}}
+                            </option>
+                        </select>
+                    </div>
+                </ng-template>
+                <ng-template #editRouter>
+                    <div class="col-sm-10">
+                        <select validation-name="service" class="form-control" (change)="onChange($event.target.value)">
+                            <option *ngFor="let itemService of services" value="{{itemService.id}}"
+                                [selected]="item.service.id == itemService.id">{{itemService.name}}
+                            </option>
+                        </select>
+                    </div>
+
+                </ng-template>
+
             </div>
         </form>
     </div>
 </katana-card>
+<!-- [(ngModel)]="item.service.id" -->
