--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -7,6 +7,7 @@
                 <div class="col-sm-10">
                     <input type="text" validation-name="Name" class="form-control" id="Name" [(ngModel)]="item.name"
                         name="name">
+                        <p style="color: #a6a6a6;">The name of the Route.</p>
                 </div>
 
             </div>
@@ -15,6 +16,7 @@
                 <label for="Name" class="col-sm-2 col-form-label">Tags <label style="font-size: small;color: grey;">(optional)</label></label>
                 <div class="col-sm-10">
                     <katana-chips  validation-name="Tags" [(model)]="item.tags" ></katana-chips>
+                    <p style="color: #a6a6a6;">Optionally add tags to the route</p>
                 </div>
 
             </div>
@@ -23,6 +25,7 @@
                 <div class="col-sm-10">
                     <input type="number" validation-name="StatusCode" class="form-control" id="URL" [(ngModel)]="item.https_redirect_status_code"
                         name="URL">
+                        <p style="color: #a6a6a6;">The status code Kong responds with when all properties of a Route match except the protocol, i.e. if the protocol of the request is HTTP instead of HTTPS. Location header is injected by Kong if the field is set to 301, 302, 307 or 308. Defaults to 426.</p>
                 </div>
 
             </div>
@@ -30,6 +33,7 @@
                 <label for="Name" class="col-sm-2 col-form-label">Host <label style="font-size: small;color: grey;">(semi-optional)</label></label>
                 <div class="col-sm-10">
                     <katana-chips validation-name="Host" [(model)]="item.hosts"></katana-chips>
+                    <!-- <p style="color: #a6a6a6;">A list of domain names that match this Route. For example: example.com. At least one of hosts, paths, or methods must be set.</p> -->
                 </div>
 
             </div>
@@ -37,6 +41,7 @@
                 <label for="Name" class="col-sm-2 col-form-label">Regex priority <label style="font-size: small;color: grey;">(optional)</label></label>
                 <div class="col-sm-10">
                     <input type="number" class="form-control" id="Port" [(ngModel)]="item.regex_priority" name="Port">
+                    <p style="color: #a6a6a6;">A number used to choose which route resolves a given request when several routes match it using regexes simultaneously. When two routes match the path and have the same regex_priority, the older one (lowest created_at) is used. Note that the priority for non-regex routes is different (longer non-regex routes are matched before shorter ones). Defaults to 0.</p>
                 </div>
 
             </div>
@@ -51,7 +56,6 @@
                 <label for="Name" class="col-sm-2 col-form-label">Methods <label style="font-size: small;color: grey;">(semi-optional)</label></label>
                 <div class="col-sm-10">
                     <katana-chips validation-name="Method" [(model)]="item.methods"></katana-chips>
-
                 </div>
             </div>
             <div class="form-group row">
@@ -63,6 +67,7 @@
                         <katana-radio-item [value]="'false'" [checked]="item.strip_path==false" [label]="'false'">
                         </katana-radio-item>
                     </katana-radio-items>
+                    <p style="color: #a6a6a6;">When matching a Route via one of the paths, strip the matching prefix from the upstream request URL.</p>
                 </div>
 
             </div>
@@ -75,6 +80,7 @@
                         <katana-radio-item [value]="'false'" [checked]="item.preserve_host==false" [label]="'false'">
                         </katana-radio-item>
                     </katana-radio-items>
+                    <p style="color: #a6a6a6;">When matching a Route via one of the hosts domain names, use the request Host header in the upstream request headers. By default set to false, and the upstream Host header will be that of the Service's host.</p>
                 </div>
 
             </div>
@@ -83,7 +89,6 @@
                 <div class="col-sm-10">
                     <katana-chips validation-name="Protocols" [(model)]="item.protocols"></katana-chips>
                 </div>
-
             </div>
             <div class="form-group row">
                 <label for="Name" class="col-sm-2 col-form-label">Service <label style="font-size: small;color: grey;">(optional)</label></label>
