--- a/src/app/demo/routes-management/edit/edit-routes.component.html
+++ b/src/app/demo/routes-management/edit/edit-routes.component.html
@@ -20,30 +20,30 @@
                     </select>
                 </ng-template>
             </div>
-            <katana-textbox [title]="'Regex Priority'" [validationName]="StatusCode" [(model)]="item.regex_priority"
+            <katana-textbox [type]="'number'" [title]="'Regex Priority'"  [(model)]="item.regexPriority"
                 *katana-item>
             </katana-textbox>
-            <katana-textbox [type]="'number'" [title]="'Status Code'" [validationName]="StatusCode"
-                [(model)]="item.https_redirect_status_code" *katana-item>
+            <katana-textbox [type]="'number'" [title]="'Status Code'" [validationName]="'statusCode'"
+                [(model)]="item.statusCode" *katana-item>
             </katana-textbox>
             <div class="form-group" *katana-item>
                 <!-- <label for="Name">Preserve Host <label style="font-size: small;color: grey;">(optional)</label></label> -->
                 <p for="Name"> <label >Preserve Host (optional)</label></p>
 
-                <katana-radio-items [(model)]="item.preserve_host">
-                    <katana-radio-item [value]="'true'" [checked]="item.preserve_host==true" [label]="'True'">
+                <katana-radio-items [(model)]="item.preserveHost">
+                    <katana-radio-item [value]="'true'" [checked]="item.preserveHost==true" [label]="'True'">
                     </katana-radio-item>
-                    <katana-radio-item [value]="'false'" [checked]="item.preserve_host==false" [label]="'False'">
+                    <katana-radio-item [value]="'false'" [checked]="item.preserveHost==false" [label]="'False'">
                     </katana-radio-item>
                 </katana-radio-items>
             </div>
             <div class="form-group" *katana-item>
                     <p for="Name"> <label >Strip Path (optional)</label></p>
 
-                    <katana-radio-items [title]="'Strip path'" [(model)]="item.strip_path">
-                            <katana-radio-item [value]="'true'" [checked]="item.strip_path==true" [label]="'True'">
+                    <katana-radio-items [title]="'Strip path'" [(model)]="item.stripPath">
+                            <katana-radio-item [value]="'true'" [checked]="item.stripPath==true" [label]="'True'">
                             </katana-radio-item>
-                            <katana-radio-item [value]="'false'" [checked]="item.strip_path==false" [label]="'False'">
+                            <katana-radio-item [value]="'false'" [checked]="item.stripPath==false" [label]="'False'">
                             </katana-radio-item>
                         </katana-radio-items>
             </div>
